<resources>
    <string name="app_name">Dispatch Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="your_trusted_delivery_partner">Your trusted delivery partner</string>
    <string name="company_description">We are flexible and dedicated logistics delivery service. Experience the fastest delivery service to your doorstep</string>
    <string name="for_users">For Users</string>
    <string name="delivery_solutions_just_for_you">Delivery Solutions just for you</string>
    <string name="delivery_solutions_desc">Quickly get a list of dispatch riders for your day to day delivery service</string>
    <string name="pick_up">Pick Up</string>
    <string name="enter_pick_up_location">Enter pick up location</string>
    <string name="delivery_destination">Delivery Destination</string>
    <string name="enter_delivery_destination">Enter delivery destination</string>
    <string name="find_riders">Find Riders</string>
    <string name="select_from_the_list_of_dispatch_riders">Select from the list of \nDispatch Riders</string>
    <string name="we_have_them_all_just_for_you_select_a_dispatch_rider">We have them all just for you. Select a dispatch rider</string>
    <string name="contact_rider">Contact Rider</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_dispatchbuddy">Welcome to DispatchBuddy</string>
    <string name="rider">Rider</string>
    <string name="user">User</string>
    <string name="dispatchbuddy">DispatchBuddy</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_create_account">Don’t have an account? <font color='#580AFF'>Create Account</font></string>
    <string name="full_name">Full Name</string>
    <string name="create_your_account">Create your account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="upload_a_photo">Upload a Photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="when_did_you_join">When did you join?</string>
    <string name="joined_since">Joined Since?</string>
    <string name="already_have_an_account_login">Already have an account? <font color='#580AFF'>Login</font></string>
    <string name="sign_up">Sign Up</string>
    <string name="login_or_sign_up_your_account">Login or Sign Up your account</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="kelechi_okoli">Kelechi Okoli</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notification">Notification</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="change_your_password">Change your password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="save">Save</string>
    <string name="home">Home</string>
    <string name="locations">Locations</string>
    <string name="account">Account</string>
    <string name="success">Success</string>
    <string name="success_message">You’ve successfully contacted Uche Okoro. \nA Rider will be in your location soon.</string>
    <string name="success_message_begin">You’ve successfully contacted </string>
    <string name="success_message_rider_name">%s.</string>
    <string name="success_message_end">A Rider will be in your location soon.</string>
    <string name="menu_home">Home</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="locations_fragment">Locations Fragment</string>
    <string name="verify_code">Verify code</string>
    <string name="a_code_has_been_sent_to_via_email">A code has been sent to \n %s via email</string>
    <string name="resend_code">Resend code</string>
    <string name="enter_date_of_birth">Enter date of Birth</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_your_country">Enter your country</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="enter_your_city_name">Enter your city name</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="select_date">Select date</string>

    //location
    <string name="select_locations_to_cover">Select locations to cover</string>
    <string name="history">History</string>
    <string name="lagos">Lagos</string>
    <string name="results">Results</string>
    <string name="ikeja">Ikeja</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="required_for_this_app">Required for this app</string>
    <string name="enable_now">Enable Now</string>
    <string name="show_more">Show more</string>
    <string name="Permission_required">Permission required</string>
    <string name="Permission_granted">Permission Granted</string>
    <string name="Permission_denied">Permission Denied</string>
    <string name="ok">OK</string>

    //requests
    <string name="all_requests">All Requests</string>
    <string name="today">Today</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednessday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="requests">Requests</string>
    <string name="ongoing">ongoing</string>
    <string name="rate">Rate</string>
    <string name="my_deliveries">My Deliveries</string>
    <string name="completed">Closed</string>
    <string name="cancelled">cancelled</string>
    <string name="deliveries">Delivery</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_valid_name_str">Enter a valid Name</string>
    <string name="enter_valid_reject_reason_str">Enter a valid Rejection Reason</string>
    <string name="enter_valid_email_str">Enter a valid Email</string>
    <string name="enter_valid_pickup_str">Enter a valid pickup Location</string>
    <string name="enter_valid_destination_str">Enter a valid Destination Location</string>
    <string name="enter_valid_phone_number_str">Enter a valid Phone number</string>
    <string name="enter_valid_date_of_birth_str">Enter a valid Date of Birth</string>
    <string name="enter_valid_password_str">Enter a valid Password</string>
    <string name="enter_valid_country">Enter a valid Country</string>
    <string name="enter_valid_city">Enter a valid City</string>
    <string name="select_an_option">Select an option</string>
    <string name="enter_valid_confirm_password_str">Password Should Match</string>
    <string name="all_deliveries">All Deliveries</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="phone">Phone</string>
    <string name="Item_Name">Item Name</string>
    <string name="enter_your_item_name">Enter your Item Name</string>
    <string name="enter_your_item_weight">Enter your item weight</string>
    <string name="Item_weight">Item Weight</string>
    <string name="no_rider_in_this_location">No rider in this location</string>
    <string name="no_rider_error_message">Please enter a correct Pickup and Destination Locations</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email_associated_with_account">Enter the email associated with your account and we’ll send an otp so you can reset your password</string>
    <string name="next">Next</string>
    <string name="no_request">No request</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="rejection_reason">Rejection Reason</string>
    <string name="enter_your_rejection_reason">Enter your reason of rejection</string>
    <string name="save_reason">Save Reason</string>
    <string name="complete">Close</string>
    <string name="ride_not_accepted">You have not Accepted this Ride</string>
    <string name="ride_closed">This Ride has been closed</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="password_not_matched">Password should not match</string>
    <string name="request_rider">Request Rider</string>
    <string name="channel_name">Dispatch</string>
    <string name="channel_description">New Dispatch Request</string>
    <string name="you_have_not_made_any_deliveries">You have not made any Deliveries</string>
    <string name="rate_amp_review"><![CDATA[Rate & Review]]></string>
    <string name="do_you_enjoy_the_experience">Do you enjoy the experience?</string>
    <string name="give_us_a_quick_rating_so_we_know_if_you_like_it">Give us a quick rating so we know</string>
    <string name="if_you_like_it">if you like it.</string>
    <string name="thank_you_for_rating">Thank you for rating</string>
    <string name="request_successful">Request Successful</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>