<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/padding_16dp"
    tools:context=".presentation.ui.authentication.EmailForChangePasswordFragment">


    <TextView
        android:id="@+id/reset_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_marginTop="@dimen/margin_30dp"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size_24sp"
        android:fontFamily="@font/inter_bold"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_email_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_email_associated_with_account"
        android:textColor="@color/textColor"
        android:fontFamily="@font/inter"
        android:textSize="@dimen/text_size_14sp"
        android:layout_marginTop="@dimen/margin_12dp"
        app:layout_constraintTop_toBottomOf="@id/reset_password_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_40dp"
        android:fontFamily="@font/inter"
        android:text="@string/email"
        android:textColor="@color/accent_color"
        android:textSize="@dimen/text_size_12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enter_email_info" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_enter_email_for_password_change_layout"
        style="@style/EditTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/hint_text_color"
        app:layout_constraintTop_toBottomOf="@+id/email_textView"
        tools:layout_editor_absoluteX="16dp">

    <com.google.android.material.textfield.TextInputEditText
        style="@style/EditTextInput"
        android:id="@+id/fragment_enter_email_for_password_change_et"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:hint="@string/enter_your_email"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_next_btn"
        style="@style/DefaultButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_48dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:enabled="false"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_enter_email_for_password_change_layout" />

    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint ="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>