<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_color"
    tools:context=".presentation.ui.authentication.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_10dp"
        android:paddingRight="@dimen/padding_10dp"
        app:elevation="@dimen/elevation_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_register_toolbar"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="@dimen/width_42dp"
                    android:layout_height="@dimen/height_42dp"
                    android:layout_marginEnd="@dimen/margin_8dp"
                    android:src="@drawable/ic_logo"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dispatchbuddy"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_size_14sp"
                    android:fontFamily="@font/inter_bold"
                    android:textStyle="bold"
                    android:textColor="@color/accent_variant_color"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/padding_16dp"
                android:paddingVertical="@dimen/padding_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_your_account"
                    android:fontFamily="@font/inter_bold"
                    android:textSize="@dimen/text_size_24sp"
                    android:textStyle="bold"
                    android:textColor="@color/accent_variant_color"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_name"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:fontFamily="@font/inter"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/accent_color"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_register_fullName_layout"
                    style="@style/EditTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    android:layout_marginTop="@dimen/margin_8dp"
                    app:hintTextColor="@color/hint_text_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextInput"
                        android:id="@+id/fragment_register_fullName_edt"
                        android:layout_width="match_parent"
                        android:inputType="textCapWords"
                        android:layout_height="@dimen/height_48dp"
                        android:hint="@string/enter_your_full_name"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/inter"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/accent_color"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextInputLayout"
                    android:id="@+id/fragment_register_email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8dp"
                    android:drawablePadding="-15dp"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/hint_text_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextInput"
                        android:id="@+id/fragment_register_email_edt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_48dp"
                        android:inputType="textEmailAddress"
                        android:hint="@string/enter_your_email"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/inter"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/accent_color"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextInputLayout"
                    android:id="@+id/fragment_register_phoneNumber_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="clear_text"
                    android:layout_marginTop="@dimen/margin_8dp"
                    app:hintTextColor="@color/hint_text_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextInput"
                        android:id="@+id/fragment_register_phoneNumber_edt"
                        android:layout_width="match_parent"
                        android:inputType="phone"
                        android:layout_height="@dimen/height_48dp"
                        android:hint="@string/enter_your_phone_number"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/fragment_register_dob_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/inter"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/accent_color"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextInputLayout"
                    android:id="@+id/fragment_register_calender_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconDrawable="@drawable/ic_calendar"
                    android:layout_marginTop="@dimen/margin_8dp"
                    app:hintTextColor="@color/hint_text_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextInput"
                        android:id="@+id/fragment_register_calender_edt"
                        android:layout_width="match_parent"
                        android:focusableInTouchMode="false"
                        android:focusable="false"
                        android:cursorVisible="false"
                        android:text=""
                        android:layout_height="@dimen/height_48dp"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:hint="@string/select_date"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/fragment_register_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:layout_marginTop="@dimen/margin_16dp"
                    android:fontFamily="@font/inter"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/accent_color"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/EditTextInputLayout"
                    android:id="@+id/fragment_register_password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:layout_marginTop="@dimen/margin_8dp"
                    app:hintTextColor="@color/hint_text_color"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextInput"
                        android:id="@+id/fragment_register_password_edt"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/height_48dp"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:hint="@string/enter_password"
                        />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fragment_register_signUp_btn"
                    style="@style/DefaultButton"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_48dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/sign_up"
                    android:enabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fragment_register_have_account_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_login"
                    android:layout_marginTop="@dimen/margin_40dp"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/inter"
                    android:textSize="@dimen/text_size_12sp"
                    android:textColor="@color/accent_color"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:indeterminateTint ="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>